tests/snapshots/render_snapshots__table_explorer__focus_mode_fullscreen_result.snap
---
source: tests/render_snapshots.rs
expression: output
---
test_project | - | - | no dsn | localhost:5432/test                             
┌ [3] Result (2 rows, 15ms) ───────────────────────────────────────────────────┐
│id   name    email                                                            │
│1    Alice   alice@example.com                                                │
│2    Bob     bob@example.com                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
Enter:Select  f:Exit Focus  j/k / ↑↓:Scroll  h/l / ←→:H-Scroll  g/G:Top/Bottom
